[project]
name = "pawee-chatbot"
version = "0.1.0"
description = "Personal AI Representative for Pawee Indulakshana"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "python-dotenv>=1.0.1",
    "gradio>=5.0.0",
    "psycopg2-binary>=2.9.10",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]
